--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,3 +87,13 @@ body {
     min-height: 100px;
     margin: 1rem 0;
 }
+.waveform {
+    margin: 1rem 0;
+    display: none;
+    cursor: pointer;
+}
+.waveform-bar {
+    height: 20px;
+    background: #28a745;
+    border-radius: 10px;
+}
