--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,11 +8,11 @@ body {
     padding: 2rem;
 }
 .recording-card {
-    border: 2px solid #28a745;
+    border: 2px none #28a745;
     border-radius: 10px;
-    padding: 2rem;
+    padding: 0rem;
     background: white;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    /*box-shadow: 0 4px 6px rgba(0,0,0,0.1);*/
 }
 .sentence-display {
     font-size: 1.5rem;
