--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,3 +108,14 @@ body {
     height: 100%;
     border-radius: 10px;
 }
+
+.sentence-display.editing {
+    border: 2px dashed #28a745;
+    background: #f8fff9;
+}
+
+.sentence-display [contenteditable="true"] {
+    outline: none;
+    width: 100%;
+    display: inline-block;
+}
