--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,14 @@
 {% block title %}Another TTS{% endblock %}
 
 {% block content %}
+
+<div class="export-link">
+    <a href="{{ url_for('export.export_overview') }}" class="export-btn">
+        Info
+    </a>
+</div>
+
+
 <h1 class="text-center mb-4" style="color: #28a745;">
     Another TTS
 </h1>
