--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
     <!-- Global custom styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
     {% block head_extra %}{% endblock %}
 </head>
